# FastFederatedLearning

./: .gitignore  CMakeLists.txt  README.md  edge_inference.py  main.py  masterworker.py  peer2peer.py  reproduce.sh  setup.sh
C/dfl/: federation.hpp  traintest.hpp  video_inference.hpp
C/examples/edgeinference/: CMakeLists.txt  edgeinference.cpp  edgeinference_2.json  edgeinference_4.json  edgeinference_7.json  process-frame.cpp
C/examples/masterworker/: CMakeLists.txt  masterworker.cpp  masterworker_2.json  masterworker_4.json  masterworker_7.json
C/examples/mvdet/: CMakeLists.txt  data_stucts.hpp  helpers.cpp  helpers.hpp  mvdet.cpp  mvdet_7_1.json  mvdet_7_1_dist.json  mvdet_central.cpp
C/examples/p2p/: CMakeLists.txt  p2p.cpp
C/utils/: net-node.hpp  net.hpp  process-frame.cpp  process-frame.hpp
dfl/: fedavg.hpp  federation.hpp  traintest.hpp
examples/: CMakeLists.txt  mnist.cpp  mnist.json  mnist_p2p.cpp
examples/edgeinference/: CMakeLists.txt  edgeinference.cpp  edgeinference_7.json  process-frame.hpp  yolov5-mandown.cpp
examples/mandown/: CMakeLists.txt  dffRankfile-epito.txt  edgeinference.cpp  mandown.cpp  process-frame.cpp  process-frame.hpp
examples/masterworker/: CMakeLists.txt  masterworker.cpp  masterworker_4.json
examples/mnist/: CMakeLists.txt
examples/mnist_p2p/: CMakeLists.txt  mnist_p2p.cpp  mnist_p2p.json
examples/mvdet/: CMakeLists.txt  data_stucts.hpp  helpers.cpp  helpers.hpp  mvdet.cpp  mvdet_1_1.json  mvdet_3_2.json  mvdet_central.cpp
examples/p2p/: CMakeLists.txt  p2p.cpp  p2p_2.json  p2p_4.json  p2p_8.json
python_interface/: configuration.py  constants.py  custom_exceptions.py  custom_logger.py  custom_types.py  dataset.py  experiment.py  json_generator.py  logging.conf  main.py  model.py  utils.py
python_interface/DSL/: masterworker.py
python_interface/DSL/flgraph/: __init__.py  broadcast.py  building_block.py  feedback.py  flgraph.py  initialisation.py  parallel.py  reduce.py  wrapper.py
python_interface/custom/: custom_exceptions.py  custom_formatter.py  custom_types.py
python_interface/utils/: constants.py  utils.py
utils/: net.hpp  serialize.hpp  utils.hpp
